syntax = "proto3";
 
option java_multiple_files=true;
option java_package="explainabilityService";
// option java_outer_classname="GrpcProto";

service Explanations {
    rpc GetExplanation (ExplanationsRequest) returns (ExplanationsResponse);
    rpc ApplyAffectedActions () returns (ApplyAffectedActionsResponse);

}

message ApplyAffectedActionsRequest {
}

message ApplyAffectedActionsResponse {
    map<string, TableContents> applied_affected_actions = 1;
}

// ----------------- Explanations Fields ----------------------------


message ExplanationsRequest {
    string explanation_type = 1; // featureExplanation | hyperparameterExplanation
    string explanation_method = 2; // pdp | 2dpdp | ale | counterfactuals | global_counterfactuals | prototypes
    string model = 3; 
    int32 model_id = 4;
    string feature1 = 5;
    string feature2 = 6;
    string query = 7;
    string target = 8;
    // Glance
    int32 gcf_size = 9;  // Global Counterfactual (GCF) size
    string cf_generator = 10;  // Counterfactual generator method
    string cluster_action_choice_algo = 11;  // Algorithm for choosing clusters' actions

}


 message Features {
    string feature1 = 1;
    string feature2 = 2;
}

message Axis {
    string axis_name = 1;
    repeated string axis_values= 2;
    string axis_type = 3;
}

message TableContents {
    int32 index=1;
    repeated string values = 2;
    repeated string colour = 3;
}

message EffCost {
   double eff = 1;
   double cost = 2;
}

message ExplanationsResponse {
    string explainability_type = 1;
    string explanation_method = 2;
    string explainability_model = 3;
    string plot_name = 4;
    string plot_descr = 5;
    string plot_type = 6;
    Features features = 7;
    repeated string hyperparameter_list = 8;
    repeated string feature_list = 9;
    Axis xAxis = 10;
    Axis yAxis = 11;
    Axis zAxis = 12; 
    map<string, TableContents> table_contents= 13;
    // Glance
    map<string, TableContents> affected_clusters = 14; 
    map<string, EffCost> eff_cost_actions = 15; 
    float TotalEffectiveness = 16;
    float TotalCost = 17;
    map<string, TableContents> actions = 18;
}
